<resources>
    <string name="app_name">mStorage</string>
    <string name="welcome">Welcome to mStorage</string>
    <string name="logo_description">Application Logo</string>
    <string name="welcome_button">Continue</string>
    <string name="import_button">Import Data</string>
    <string name="view_button">View Inventory</string>
    <string name="audit_button">Inventory Audit</string>
    <string name="reports_button">Reports</string>
    <string name="select_all_checkbox">Select All</string>
    <string name="wipe_data">Wipe Data</string>
    <string name="import_department">IMPORT</string>
    <string name="qrscanner"></string>
    <string name="add_note">ADD Note</string>
    <string name="item_name">Item Name:</string>
    <string name="item_description">Item Description:</string>
    <string name="item_category">Item Category:</string>
    <string name="item_position">Item Position:</string>
    <string name="item_sku">Item SKU:</string>
    <string name="item_barcode">Item Barcode:</string>
    <string name="item_quantity">Item Quantity:</string>
    <string name="in_department">In Department:</string>
    <string name="add_item">Add Item</string>
    <string name="select">Select</string>
    <string name="item_measurement">Item Measurement:</string>
    <string name="complete_audit">Complete Audit</string>

</resources>
